[tool.poetry]
name = "action-exam"
version = "0.1.0"
description = ""
authors = ["Philip <apostod@gmail.com>"]
readme = "README.md"
packages = [{include = "action_exam"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
